--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="tab-contents active-tab" id="Skills">
       <ul>
         <li>Cloud Platform: <span>AWS Cloud</span></li>
-        <li>DevOps Tools: <span>Jenkins, Docker, Kubernetes</span></li>
+        <li>DevOps Tools: <span>Jenkins, GitHub Actions, Docker, Kubernetes</span></li>
         <li>Infrastructure as Code: <span>Terraform, Ansible</span></li>
         <li>Version Control: <span>Git, GitHub</span></li>
         <li>Operating Systems: <span>Linux</span></li>
@@ -64,7 +64,7 @@
   
     <div class="tab-contents" id="Education">
       <ul>
-      <li>2019-2023 <span>Annamacharya Institute of Technologies and Sciences (AITS)</span></li>
+      <li>2019-2023 <span>JNTUA</span></li>
       <li>2017-2019 <span>Narayana Junior College</span></li>
       <li>2016-2017 <span>Ratnam High School</span></li>
       </ul>
@@ -147,7 +147,7 @@
           <a href="https://www.linkedin.com/in/neelima-g/"><i class="fa-brands fa-linkedin"></i></a>
           <a href="https://github.com/iam-neelima"><i class="fa-brands fa-github"></i></a>
         </div>
-        <a href="images/NeelimaGali-DevOps.pdf"Download class="btn btn2">Download CV</a>
+        <a href="images/Neelima-Junior DevOps.pdf"Download class="btn btn2">Download CV</a>
       </div>
         <div  class="contact-right">
           <form name="submit-to-google-sheet">
