--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <a href="https://www.linkedin.com/in/neelima-g/"><i class="fa-brands fa-linkedin"></i></a>
           <a href="https://github.com/iam-neelima"><i class="fa-brands fa-github"></i></a>
         </div>
-        <a href="images/Neelima-Junior DevOps.pdf"Download class="btn btn2">Download CV</a>
+        <a href="images/Neelima_Junior DevOps.pdf"Download class="btn btn2">Download CV</a>
       </div>
         <div  class="contact-right">
           <form name="submit-to-google-sheet">
