--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <p><i class="fa-solid fa-envelope"></i>neelima2422@gmail.com</p>
         <p><i class="fa-solid fa-phone"></i>+91 9581264402</p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/neelima-g/"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/neelimagali/"><i class="fa-brands fa-linkedin"></i></a>
           <a href="https://github.com/iam-neelima"><i class="fa-brands fa-github"></i></a>
         </div>
         <a href="images/Neelima_Junior DevOps.pdf"Download class="btn btn2">Download CV</a>
